# cyagen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  sample.c
example/source/: sample.c
example/templates/gtest/: CMakeLists.txt.njk  README.md.njk  target_@sourcename@.cc.njk  target_@sourcename@.h.njk  test_@sourcename@.cc.njk  wrapper_@sourcename@.h.njk
example/tst/gtest/test_sample_backup/: CMakeLists.txt  test_sample.cc
src/: generator.rs  lib.rs  main.rs  parser.rs
