[package]
name = "cyagen"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Text file generator based on C file and templates"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
chrono = "0.4"
clap = { version = "3.0.14", features = ["derive"] }
anyhow = "1.0"
