[package]
name = "cyagen"
version = "0.1.10"
edition = "2021"
license = "MIT"
description = "Text file generator based on C file and templates"
readme = "README.md"
keywords = ["c", "generator"]
categories = ["command-line-utilities"]
repository = "https://github.com/robinbreast/cyagen"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
chrono = "0.4"
clap = { version = "4.2.2", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.4.0", features = ["v5", "fast-rng", "macro-diagnostics"] }
tera = "1.19.0"
